# AIR

./: CMakeLists.txt  README.md
bin_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  air.VC.VC.opendb  air.sln  cmake_install.cmake
bin_x64/src/: air.vcxproj  air.vcxproj.filters  cmake_install.cmake  log.csv  neuralNetwork.hpp.vcxproj  neuralNetwork.hpp.vcxproj.filters  weights.csv
bin_x64/src/RelWithDebInfo/: air.ilk
bin_x64/src/air.dir/Debug/air.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  air.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin_x64/src/air.dir/RelWithDebInfo/air.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin_x64/src/air.dir/Release/air.tlog/: CL.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin_x64/x64/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
bin_x64/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.write.1.tlog
bin_x64/x64/Release/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
bin_x64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  (+1 more)
src/: CMakeLists.txt  DataEntry.hpp  DataReader.cpp  DataReader.hpp  NeuralNetwork.cpp  NeuralNetwork.hpp  NeuralNetworkTrainer.cpp  NeuralNetworkTrainer.hpp  TrainingDataSet.hpp  main.cpp
